# triangle_check

./: CHANGELOG.txt  CLA.md  LICENSE  License.txt  README.md  legal_notices.txt  pyproject.toml  requirements.txt  run.sh  setup.cfg  triangle_check.py  triangle_check.spec
.github/workflows/: main.yml
triangle_check/: __init__.py  __main__.py
