[metadata]
name = triangle_check
version = 1.1
author = Kaspersky Lab
author_email = triangulation@kaspersky.com
description = Triangle Check: scan iTunes backups for traces of compromise by Operation Triangulation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/KasperskyLab/triangle_check
license_files = License.txt
                legal_notices.txt
                CLA.md
project_urls =
    Bug Tracker = https://github.com/KasperskyLab/triangle_check/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.8
install_requires = 
                setuptools>=42
                colorama==0.4.6
                pycryptodome==3.17

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    triangle_check = triangle_check:__main__.main
